# postech-iadev

./: .gitignore  Projeto_1.ipynb  README.md  analise-regressão.ipynb  app.py  docker-compose.yml  rf-model.pkl  tech challenge.ipynb  tech-challenge.ipynb
1 - Tech challenge /: Dockerfile  Makefile
1_Tech_challenge/: README.md  pyproject.toml
1_Tech_challenge/notebooks/: tech-challenge.ipynb
2 - Tech Challenge/: README.md
2_Tech_challenge/: app.py  makefile  requirements.txt  utils.py
3 - Tech Challenge/: README.md  fine-tunning.ipynb
3 - Tech Challenge/results/: results_modelo_v2.csv  results_modelo_v3.csv
3_Tech_Challenge/: conclusions.ipynb
3_Tech_Challenge/results/: all_results.csv  results_modelo_v0.csv  results_modelo_v1.csv  results_modelo_v4.csv
4_Tech_challenge/: README.md  analisys_facial.py  requirements.txt  resume.md  utils.py
5_Hackaton/: README.md  application.py  requirements.txt
5_Hackaton/runs/detect/train/: args.yaml
5_Hackaton/runs/detect/train2/: args.yaml  results.csv
5_Hackaton/yolo/: classes.txt  dataset.yaml  labels.cache  notes.json
5_Hackaton/yolo/labels/: 5943f652-azure_diagram.txt  6a7da130-aws_diagram.txt  89e51b40-AWS-Icons.txt  e7cd03ee-Azure-icons.txt
notebooks/: ags.ipynb  ags.py  app.py  produtos_amostra.json  tech-challenge.ipynb
