[tool.poetry]
name = "tech-challenge"
version = "0.1.0"
description = ""
authors = ["junior.farias"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
seaborn = "^0.13.2"
kaleido = "0.2.1"
pycaret = "^3.3.2"
pandas = "2.1.4"
scikit-learn = "1.4.2"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
